2003-09-11  John W. Eaton  <jwe@bevo.che.wisc.edu>

	* pr-output.cc (Fformat): Doc fix.
	(current_output_max_field_width, current_output_precision):
	New functions.
	(float_format::float_format (int, int, int)): Use them to provide
	default values for field width and precision.
	(print_g): New static variable.
	(set_real_format, set_real_matrix_format, set_complex_format) 
	(set_complex_matrix_format, set_range_format): Handle print_g.
	(pr_float, pr_complex): Don't scale if using print_g.
	(set_format_style): Accept new "g" and "G" modifiers for short and
	long formats and set print_g.
	Set default precision and width for short to 5, 10.
	Set default precision and width for long to 15, 20.

2003-09-10  John W. Eaton  <jwe@bevo.che.wisc.edu>

	* OPERATORS/op-m-cs.cc (complex_matrix_conv): Delete function.
	(install_m_cs_ops): Don't install complex_matrix_conv here.

	* OPERATORS/op-s-cs.cc (complex_matrix_conv): Delete function.
	(install_s_cs_ops): Don't install complex_matrix_conv here.

	* OPERATORS/op-s-s.cc (matrix_conv): Delete function.
	(install_s_s_ops): Don't install matrix_conv here.

	* OPERATORS/op-cs-s.cc (complex_matrix_conv): Delete function.
	(install_cs_s_ops): Don't install complex_matrix_conv here.

	* OPERATORS/op-cs-m.cc (complex_matrix_conv): Delete function.
	(install_cs_m_ops): Don't install complex_matrix_conv here.

	* OPERATORS/op-cs-cs.cc (complex_matrix_conv): Delete function.
	(install_cs_cs_ops): Don't install complex_matrix_conv here.

	* ov-typeinfo.cc (do_register_unary_op,
	do_register_non_const_unary_op, do_register_binary_op,
	do_register_assign_op, do_register_assignany_op,
	do_register_pref_assign_conv, do_register_widening_op):
	Print warning if installing a duplicate function.

2003-09-10  Petter Risholm  <risholm@stud.ntnu.no>

	* data.cc, ov-base.cc, ov-base.h, ov.h, ov.cc, ov-re-mat.h,
	ov-scalar.h, ov-re-nd-array.h, ov-re-nd-array.cc: Use NDArray, not
	ArrayN<double>.

2003-09-09  John W. Eaton  <jwe@bevo.che.wisc.edu>
